k8s/overlays/prod/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-docker
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ingressClassName: traefik
  rules:
    - host: auth.stringtecnologiadf.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
